force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
        <fullName>Answer__c</fullName>
        <inlineHelpText>Use this field to document the answer to the question discussed in the Knowledge Article.</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>