force-app/main/default/objects/Knowledge__kav/fields/Procedure_Purpose__c.field-meta.xml
<CustomField>
        <fullName>Procedure_Purpose__c</fullName>
        <inlineHelpText>Use this field to describe the purpose of this procedure.</inlineHelpText>
        <label>Procedure Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>