force-app/main/default/objects/Knowledge__kav/fields/Procedure_Warnings__c.field-meta.xml
<CustomField>
        <fullName>Procedure_Warnings__c</fullName>
        <inlineHelpText>Use this field to capture warnings and caveats that a user should know before following this procedure.  For example, you may want to include potential impacts or preparation needed before following this procedure.</inlineHelpText>
        <label>Procedure Warnings</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>