force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles.</description>
        <label>FAQ</label>
    </RecordType>