force-app/main/default/objects/Knowledge__kav/recordTypes/Procedure.recordType-meta.xml
<RecordType>
        <fullName>Procedure</fullName>
        <active>true</active>
        <description>This can be used for defining how to do something or the steps of a procedure.</description>
        <label>Procedure</label>
    </RecordType>